Fix alignment and colors

--- a/src/main/resources/com/greatwebguy/application/application.css
+++ b/src/main/resources/com/greatwebguy/application/application.css
@@ -45,3 +45,15 @@
 .main-pane {
 	-fx-background-color: #333333;
 }
+
+.grey {
+	-fx-background-color: #333333;
+}
+
+.red {
+	-fx-background-color: #333333;
+}
+
+.green {
+	-fx-background-color: #333333;
+}
